# ai-invention-low-rank-recurrent-coordinator-for-communication-e

./: README.md
annotated_low_rank_coordinator_interaction_dataset/demo/: data_demo.ipynb
comprehensive_evaluation_of_low_rank_coordinator_metrics/src/: artifact_metadata.json  artifact_title.txt  eval.py  eval_out.json  generate_versions.py  preview_eval_out.json  pyproject.toml
comprehensive_evaluation_of_low_rank_coordinator_metrics/src/dependencies/Empirical_Evaluation_of_Low-Rank_Recurrent_Coordin/: method_out.json
comprehensive_evaluation_of_low_rank_coordinator_metrics/src/low_rank_coordinator_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cross_task_token_efficiency_evaluation_of_low_rank_coordinat/src/: artifact_metadata.json  artifact_title.txt  create_versions.py  eval.py  eval_out.json  evaluate.py  mini_eval_out.json  preview_eval_out.json  pyproject.toml
cross_task_token_efficiency_evaluation_of_low_rank_coordinat/src/dependencies/Empirical_Evaluation_of_Low-Rank_Recurrent_Coordin/: artifact_metadata.json  artifact_title.txt  mini_method_out.json
cross_task_token_efficiency_evaluation_of_low_rank_coordinat/src/dependencies/RankAblation_Study_of_LowRank_Recurrent_Coordinato/: ANALYSIS_REPORT.md  README.md  method_execution_output.txt  method_out.json  method_summary.json  test_framework.py
cross_task_token_efficiency_evaluation_of_low_rank_coordinat/src/low_rank_coordinator_eval.egg-info/: PKG-INFO  SOURCES.txt
dynamic_rank_adaptation_for_low_rank_recurrent_coordinator/src/: EXPERIMENT_REPORT.md  FINAL_SUMMARY.txt  README.md  artifact_metadata.json  artifact_title.txt  create_visualizations.py  full_method_out.json  generate_versions.py  method.py  method_summary.json  mini_method_out.json  preview_method_out.json  pyproject.toml
dynamic_rank_adaptation_for_low_rank_recurrent_coordinator/src/dynamic_rank_coordinator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
paper/: paper.tex  references.bib
(+100 files in other folders)
