[project]
name = "low-rank-coordinator-eval"
version = "0.1.0"
description = "Comprehensive evaluation of low-rank recurrent coordinator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
