[project]
name = "dynamic-rank-coordinator"
version = "0.1.0"
description = "Dynamic Rank Adaptation for Low-Rank Recurrent Coordinator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "tiktoken>=0.5.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
