[project]
name = "low-rank-coordinator"
version = "0.1.0"
description = "Low-rank recurrent coordinator for multi-LLM agent communication efficiency"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "tiktoken>=0.5.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
